@@ -1,0 +1,36 @@
+<body id="index">
+
+<title>David vs. Goliath - Part I</title>
+
+<s id="top">
+
+<title>The Top Section</title>
+
+David and Goliath were standing by each other.    
+
+David said unto Goliath: "I will shoot you. I <b>swear</b> I will"
+
+<s id="goliath">
+
+<title>Goliath's Response</title>
+
+Goliath was not amused.
+
+He said to David: "Oh, really. <i>David</i>, the red-headed!".
+
+<programlisting>
+
+print "Foo Bar Baz\n";
+for (i=0;i&lt;4;i++)
+{
+&#32;&#32;&#32;&#32;print "Foo $i\n";
+}
+
+</programlisting>
+
+</s>
+
+</s>
+
+</body>
+
