@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 13;
+use Test::More tests => 15;
 
 use Test::XML;
 
@@ -34,9 +34,10 @@ my @tests = (qw(
     sections-a-href
     with-ul-ol-li
     with-blockquote
+    with-programlisting
     ));
 
-# TEST:$num_texts=6
+# TEST:$num_texts=7
 
 my $grammar = XML::Grammar::Fiction::FromProto->new({
         parser_class => "XML::Grammar::Fiction::FromProto::Parser::QnD",
